apps/product-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: product-service
          image: 908692150527.dkr.ecr.ap-south-1.amazonaws.com/product-service:test
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          # ✅ CORRECT PROBES FOR THIS APP
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
